--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Adoption Center</title>
+    <title>My Pet Adoption Center</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -22,7 +22,7 @@
             fresh daily.
           </p>
           <div class="intro-buttons">
-            <a href="#" class="our-btn utility-mr">View pets</a>
+            <a href="#view-pets" class="our-btn utility-mr">View pets</a>
             <a href="#" class="our-btn our-btn--outline">Manage Pets</a>
           </div>
           <!-- end of buttons -->
@@ -147,7 +147,7 @@
       <!-- end of top section -->
     </div>
     <!-- end of top-section wrapper -->
-    <div class="page-section">
+    <div class="page-section" id="view-pets">
       <div class="page-section-inner">
         <h2 class="page-section-title">Meet Our Pets</h2>
         <div class="pet-filter">
