--- a/index.html
+++ b/index.html
@@ -159,10 +159,12 @@
         </div>
         <!-- end of page filter -->
 
-        <div class="list-of-pets">
+        <div class="list-of-pets"></div>
+
+        <template id="pet-card-template">
           <div class="pet-card">
             <div class="pet-card-text">
-              <h3>Barksalot</h3>
+              <h3></h3>
               <p class="pet-description">
                 Barksalot is a sweet and lovable 3 year old ball of fluff. He
                 loves carrots, celery, and playing fetch.
@@ -176,56 +178,9 @@
               />
             </div>
           </div>
-          <!-- end of pet card 1-->
-          <div class="pet-card">
-            <div class="pet-card-text">
-              <h3>Meowsalot</h3>
-              <p class="pet-description">
-                Meowsalot is the most talkative cat we&rsaquo;ve ever come
-                across. Constant meowing, chirping and purring!
-              </p>
-              <p class="pet-age">1 Years Old</p>
-            </div>
-            <div class="pet-card-photo">
-              <img
-                src="images/Meowsalot.jpg"
-                alt=" A black and white fluffy cat named Meowsalot"
-              />
-            </div>
-          </div>
-          <!-- end of pet card 2 -->
-          <div class="pet-card">
-            <div class="pet-card-text">
-              <h3>Woof</h3>
-              <p class="pet-description">
-                Woof is a very talkative and sweet pup. She loves beets, plums,
-                cuddles and jumping over low fences.
-              </p>
-              <p class="pet-age">less than a year old</p>
-            </div>
-            <div class="pet-card-photo">
-              <img src="images/woof.jpg" alt=" A brown fluffy dog named woof" />
-            </div>
-          </div>
-          <!-- end of pet card 3 -->
-          <div class="pet-card">
-            <div class="pet-card-text">
-              <h3>Purrsloud</h3>
-              <p class="pet-description">
-                Purrsloud has the loudest and most relaxing purr that&rsaquo;s
-                come through our center. Come hear it yourself.
-              </p>
-              <p class="pet-age">4 Years Old</p>
-            </div>
-            <div class="pet-card-photo">
-              <img
-                src="images/purrsloud.jpg"
-                alt=" A brown bushy cat named Purrsloud"
-              />
-            </div>
-          </div>
-          <!-- end of pet card 4 -->
-        </div>
+        </template>
+        <!-- end of pet card 1-->
+
         <!-- end of list of pets -->
       </div>
       <!-- end of page section inner -->
